k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tejo-beauty
  labels:
    name: tejo-beauty
